# gal_helper_backend

./: .env.example  .gitignore  README.md  ai_service.py  api_server.py  auto_run.py  cli_client.py  config.py  create_all_tables.py  database.py  main.py  pyproject.toml  rag_processor.py  requirements.txt  setup.py  setup_database.py  test_connection.py  test_vector.py
api/: __init__.py
api/v1/: __init__.py  chat.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  chat.py  chat_session.py  recursive_search.py  system.py
app/core/: __init__.py  config.py  db.py  dependencies.py  langchain.py  lifespan.py  logging.py
app/crud/: __init__.py  chat_info.py  common.py  documents.py  rag_history.py
app/models/: chat_info.py  document.py
app/schemas/: chat_info.py
app/services/: chat_info.py
app/services/agent/: rag_tools.py
app/services/ai/: __init__.py  agent_graph.py  agent_tools.py  chat_service.py  embedding_service.py  rag_processor.py  search_service.py  token_counter.py
app/services/ai/prompts/: system_prompts.py
app/services/retriever/: __init__.py  config.py  recursive_retriever.py
app/utils/: constants.py  exception.py  response.py  utils.py
core/: __init__.py  langchain.py
crud/: chat_info.py  utils.py
docs/: ARCHITECTURE.md  RECURSIVE_RETRIEVAL.md  RECURSIVE_RETRIEVAL_QUICK_REFERENCE.md  RERANK_REFERENCE.md
gal_helper_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reranker/: reranker.py
schemas/: chat_info.py
scripts/: init_database.py  migrate_documents_to_vectorstore.py  test_unified_system.py  verify_search.py
services/: chat_info.py
services/agent/: rag_tools.py
services/ai/: agent_graph.py  agent_tools.py
services/retriever/: hybrid_retriever.py  recursive_retriever.py
services/tools/: tagging_tool.py
tests/: 1.py  test_connection.py  test_recursive_retrieval.py  test_rerank.py  test_vector.py
tools/: cleanup_project.py  demo_recursive_retrieval.py  verify_implementation.py
utils/: exception_handlers.py
