[project]
name = "gal_helper_backend"
version = "0.1.0"
description = "AI Agent for Galgame Support"
requires-python = ">=3.11"
dependencies = [
    # FastAPI
    "fastapi>=0.83.0",
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",

    # 数据库
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",

    # 数据处理
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",

    # LangChain
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langchain-postgres>=0.0.1",
    "langchain-text-splitters>=0.0.1",

    # LangGraph
    "langgraph>=0.0.20",
    "langgraph-checkpoint-postgres>=1.0.0",

    # 工具
    "sentence-transformers>=2.2.0",
    "uuid6>=1.0.0",
    "aiohttp>=3.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.optional-dependencies]
full = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
